Issues Scoffolding controllers and views using EF

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -55,6 +55,9 @@
                     <li class="nav-item nav-link">
                         @Html.ActionLink("Admin", "AddHome4Sale", "AddSale")
                     </li>
+                    <li class="nav-item nav-link">
+                        @Html.ActionLink("Enrollment", "Index", "Enrollment")
+                    </li>
                 </ul>
             </div>
         </nav>
