trouble with initializer

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -47,17 +47,15 @@
                         @Html.ActionLink("Contact", "Contact", "Home")
                     </li>
                     <li class="nav-item nav-link">
-                        @Html.ActionLink("Approval Form", "PreApprovedCustomer", "Customer")
+                        @Html.ActionLink("Home Info", "Index", "HomeHome")
                     </li>
                     <li class="nav-item nav-link">
-                        @Html.ActionLink("Available Homes", "Index", "Home4Sale")
+                        @Html.ActionLink("Resident Info", "Index", "Resident")
                     </li>
                     <li class="nav-item nav-link">
-                        @Html.ActionLink("Admin", "AddHome4Sale", "AddSale")
+                        @Html.ActionLink("Images", "Index", "Graphic")
                     </li>
-                    <li class="nav-item nav-link">
-                        @Html.ActionLink("Enrollment", "Index", "Enrollment")
-                    </li>
+                    
                 </ul>
             </div>
         </nav>
