--- a/Views/Home/About.cshtml
+++ b/Views/Home/About.cshtml
@@ -1,7 +1,73 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+
+<div class="bg-light">
+    <div class="container py-5">
+        <div class="row h-100 align-items-center py-5">
+            <div class="col-lg-6">
+                <h1 class="display-4" style="color:black;">About us page</h1>
+                <p class="lead  mb-0" style="color:black;">We are a mobile home community located in Coleman, MI</p>
+                
+            </div>
+            <div class="col-lg-6 d-none d-lg-block"><img src="~/Content/images/office1.jpg" alt="park office" class="img-fluid"></div>
+        </div>
+    </div>
+</div>
+
+<div class="bg-white py-5">
+    <div class="container py-5">
+        <div class="row align-items-center mb-5">
+            <div class="col-lg-6 order-2 order-lg-1">
+               
+                <h2 class="font-weight-light" style="color:black";>We Strive To Keep A Happy Community</h2>
+                <p class="font-italic  mb-4" style="color:black;">The majority of our residents participate in a weekly get together where everyone brings something to share.</p>
+            </div>
+            <div class="col-lg-5 px-5 mx-auto order-1 order-lg-2"><img src="~/Content/images/park.jpg" alt="park" class="img-fluid mb-4 mb-lg-0"></div>
+        </div>
+        <div class="row align-items-center">
+            <div class="col-lg-5 px-5 mx-auto"><img src="~/Content/images/mainRd.jpg" alt="main road" class="img-fluid mb-4 mb-lg-0"></div>
+            <div class="col-lg-6">
+                
+                <h2 class="font-weight-light" style="color:black;">We Strive to Maintain our infrastructure</h2>
+                <p class="font-italic  mb-4" style="color:black;">Roads are regularly repaved or refinished.  Roads are maintained during the hard winter months.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="bg-light py-5">
+    <div class="container py-5">
+        <div class="row mb-4">
+            <div class="col-lg-5">
+                <h2 class="display-4 font-weight-light">Our Development team</h2>
+            </div>
+        </div>
+
+        <div class="row text-center">
+            <!-- Team item-->
+            <div class="col-xl-3 col-sm-6 mb-5">
+                <div class="bg-white rounded shadow-sm py-5 px-4">
+                    <img src="~/Content/images/PJ1.jpg" alt="P.J. Ruddy" width="100" class="img-fluid rounded-circle mb-3 img-thumbnail shadow-sm">
+                    <h5 class="lead  mb-0" style="color:black;">PJ Ruddy</h5><span class="small text-uppercase " style="color:black;">Software Developer</span>
+                    <ul class="social mb-0 list-inline lead">
+                        <li class="list-inline-item" style="color:black;"><a href="https://www.facebook.com/pj.ruddy.7" class="social-link" style="color:black;"><i class="fab fa-facebook"></i></a></li>
+                        
+                        <li class="list-inline-item" style="color:black;"><a href="https://www.linkedin.com/in/patrick-ruddy-209361171/" class="social-link" style="color:black;"><i class="fab fa-linkedin"></i></a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- End-->
+          
+
+        </div>
+    </div>
+</div>
+
+
+<footer class="bg-light pb-5">
+    <div class="container text-center">
+        <p class="font-italic text-muted mb-0">&copy; Copyrights Southgate Mobile Village All rights reserved.</p>
+    </div>
+</footer>
