contact page updated

--- a/Views/Home/Contact.cshtml
+++ b/Views/Home/Contact.cshtml
@@ -1,17 +1,45 @@
 ﻿@{
     ViewBag.Title = "Contact";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<div class="container-fluid">
+    <h1 class="text-center" style="color:chartreuse;">Contact Us</h1>
+    <hr>
+    <div class="row">
+        
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2882.0065635084093!2d-84.58974448467991!3d43.751960479118026!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88218cbdb287b9a7%3A0x4a93e5e17d737f23!2sSouthgate%20Mobile%20Village%20Inc!5e0!3m2!1sen!2sus!4v1581091115006!5m2!1sen!2sus" width="100%" height="320" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+    <div class="row text-center">
+        <div class="col-4 box1 pt-4">
+            <a style="color:chartreuse;" href="tel:+19894651048">
+                <i class="fas fa-phone"></i>
+                <h3 class="d-none d-lg-block d-xl-block">Phone</h3>
+                <p class="d-none d-lg-block d-xl-block">+19894651048</p>
+            </a>
+        </div>
+        <div  class="col-4 box2 pt-4">
+            <a style="color:chartreuse;" href="https://goo.gl/maps/87v1EgGxTBLxAXYV6">
+                <i class="fas fa-home"></i>
+                <h3 class="d-none d-lg-block d-xl-block">Address</h3>
+                <p class="d-none d-lg-block d-xl-block">330 S 3rd St #75, Coleman, MI 48618</p>
+            </a>
+        </div>
+        <div class="col-4 box3 pt-4">
+            <a style="color:chartreuse;" href="mailto:test@test.com">
+                <i class="fas fa-envelope"></i>
+                <h3 class="d-none d-lg-block d-xl-block">E-mail</h3>
+                <p class="d-none d-lg-block d-xl-block">test@test.com</p>
+            </a>
+        </div>
+    </div>
+</div>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+
+<div class="row text-center bg-light text-white" id="author">
+    <div class="col-12 mt-4 h3 ">
+        <a style="color:aliceblue;" href="https://www.facebook.com/pj.ruddy.7">by PJ Ruddy</a>
+    </div>
+    <div class="col-12 my-2">
+        <a style="color:aliceblue;" href="https://www.linkedin.com/in/patrick-ruddy-209361171/" ><i class="fab fa-linkedin"></i></a>
+    </div>
+</div>
