--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -56,7 +56,7 @@
                     <li class="nav-item nav-link">
                         @Html.ActionLink("Images", "Index", "Graphic")
                     </li>
-                    
+
                 </ul>
             </div>
         </nav>
@@ -72,5 +72,13 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-slimScroll/1.3.8/jquery.slimscroll.min.js"></script>
+    <script>
+        $(function () {
+            $('.listing-block').slimScroll({
+                height: '500px'
+            });
+        });
+    </script>
 </body>
 </html>
