--- a/Content/bootstrap.css
+++ b/Content/bootstrap.css
@@ -11709,7 +11709,9 @@ a.text-dark:hover, a.text-dark:focus {
 .table-hover .table-primary:hover, .table-hover .table-primary:hover > th, .table-hover .table-primary:hover > td {
     background-color: #c85e17;
 }
-
+a {
+    color: aqua;
+}
 .table-hover .table-secondary:hover, .table-hover .table-secondary:hover > th, .table-hover .table-secondary:hover > td {
     background-color: #43505d;
 }
