--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - My ASP.NET Application</title>
+    <title>@ViewBag.Title - Southgate Mobile Village</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <script src="https://kit.fontawesome.com/5d6ddfaa43.js" crossorigin="anonymous"></script>
@@ -31,7 +31,7 @@
 <body>
 
     <header>
-        <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+        <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top">
             <a class="navbar-brand" href="#">Southgate Mobile Village</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                 <span class="navbar-toggler-icon"></span>
@@ -56,7 +56,14 @@
                     <li class="nav-item nav-link">
                         @Html.ActionLink("Images", "Index", "Graphic")
                     </li>
+                    <li class="nav-item nav-link">
+                        @Html.ActionLink("Home Listings", "Display", "HomeHome")
+                    </li>
 
+                </ul>
+                <ul class="nav navbar-nav ml-auto">
+                    <li class="nav-item nav-link"><a href="@Url.Action("Register", "Account")"><i class="fas fa-registered"></i> Register</a></li>
+                    <li class="nav-item nav-link"><a href="@Url.Action("Login", "Account")"><i class="fas fa-sign-in-alt"></i> Login</a></li>
                 </ul>
             </div>
         </nav>
@@ -73,12 +80,6 @@
     @Scripts.Render("~/bundles/bootstrap")
     @RenderSection("scripts", required: false)
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jQuery-slimScroll/1.3.8/jquery.slimscroll.min.js"></script>
-    <script>
-        $(function () {
-            $('.listing-block').slimScroll({
-                height: '500px'
-            });
-        });
-    </script>
+   
 </body>
 </html>
